# solana-security-patterns

./: .gitignore  COMPLETION_GUIDE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  PR_PREPARATION.md  README.md
.github/workflows/: ci.yml
docs/: deep-dive.md  references.md  research-summary.md
examples/01-missing-account-validation/: Anchor.toml  README.md  package.json
examples/01-missing-account-validation/programs/secure/: Cargo.toml
examples/01-missing-account-validation/programs/secure/src/: lib.rs
examples/01-missing-account-validation/programs/vulnerable/: Cargo.toml
examples/01-missing-account-validation/programs/vulnerable/src/: lib.rs
examples/01-missing-account-validation/tests/: exploit.ts  secure.ts
examples/02-signer-authorization/: Anchor.toml  README.md  package.json
examples/02-signer-authorization/tests/: exploit.ts  secure.ts
examples/03-arithmetic-overflow/: Anchor.toml  README.md  package.json
examples/03-arithmetic-overflow/tests/: exploit.ts  secure.ts
examples/04-cpi-security/: Anchor.toml  README.md  package.json
examples/04-cpi-security/programs/secure/: Cargo.toml
examples/04-cpi-security/programs/secure/src/: lib.rs
examples/04-cpi-security/programs/vulnerable/: Cargo.toml
examples/04-cpi-security/programs/vulnerable/src/: lib.rs
examples/04-cpi-security/tests/: exploit.ts  secure.ts
examples/05-account-closure/: Anchor.toml  README.md  package.json
examples/05-account-closure/programs/secure/: Cargo.toml
examples/05-account-closure/programs/secure/src/: lib.rs
examples/05-account-closure/programs/vulnerable/: Cargo.toml
examples/05-account-closure/programs/vulnerable/src/: lib.rs
examples/05-account-closure/tests/: exploit.ts  secure.ts
examples/06-pda-seed-collision/: Anchor.toml  README.md  package.json
examples/07-precision-loss/: Anchor.toml  README.md  package.json
scripts/: generate-examples.sh
