[package]
name = "missing-validation-secure"
version = "0.1.0"
description = "Secure example: Proper account validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_validation_secure"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
