[package]
name = "missing-validation-vulnerable"
version = "0.1.0"
description = "Vulnerable example: Missing account validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_validation_vulnerable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
