[package]
name = "cpi-security-secure"
version = "0.1.0"
description = "Secure example: Safe CPI patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_security_secure"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"